--- a/auctioneer/js/package.json
+++ b/auctioneer/js/package.json
@@ -50,6 +50,7 @@
     "@metaplex-foundation/solita": "^0.7.0",
     "eslint": "^8.27.0",
     "prettier": "^2.7.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typedoc": "^0.23.20"
   }
 }
