--- a/bubblegum/js/package.json
+++ b/bubblegum/js/package.json
@@ -41,12 +41,9 @@
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@metaplex-foundation/amman": "0.12.0",
     "@metaplex-foundation/beet": "0.7.1",
     "@metaplex-foundation/beet-solana": "0.4.0",
     "@metaplex-foundation/mpl-token-metadata": "^2.3.3",
-    "@metaplex-foundation/rustbin": "^0.3.1",
-    "@metaplex-foundation/solita": "^0.18.0",
     "@solana/spl-account-compression": "^0.1.1",
     "@metaplex-foundation/cusper": "^0.0.2",
     "@project-serum/anchor": "0.24.2",
@@ -55,22 +52,15 @@
     "js-sha3": "^0.8.0"
   },
   "devDependencies": {
-    "@metaplex-foundation/amman": "0.10.0",
-    "@metaplex-foundation/mpl-token-metadata": "^2.2.0",
-    "@metaplex-foundation/rustbin": "^0.3.1",
-    "@metaplex-foundation/solita": "^0.12.2",
-    "@solana/spl-account-compression": "^0.1.0",
+    "@metaplex-foundation/amman": "0.12.1",
+    "@metaplex-foundation/solita": "^0.19.0",
     "typescript-collections": "^1.3.3",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
     "@types/chai": "^4.3.0",
     "@types/jest": "^29.1.1",
     "@types/mocha": "^9.0.0",
     "@types/tape": "^4.13.2",
     "chai": "^4.3.4",
-    "eslint": "^8.3.0",
+    "eslint": "^8.27.0",
     "jest": "^29.1.2",
     "mocha": "^9.0.3",
     "prettier": "^2.5.1",
@@ -81,7 +71,6 @@
     "ts-jest": "^29.0.3",
     "ts-jest-resolver": "^2.0.0",
     "ts-mocha": "^10.0.0",
-    "typedoc": "^0.23.10",
-    "typescript": "^4.3.5"
+    "typedoc": "^0.23.20"
   }
 }
