--- a/auction-house/js/package.json
+++ b/auction-house/js/package.json
@@ -54,6 +54,7 @@
     "prettier": "^2.7.1",
     "spok": "^1.4.3",
     "tape": "^5.5.2",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typedoc": "^0.23.20"
   }
 }
