--- a/fixed-price-sale/js/package.json
+++ b/fixed-price-sale/js/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@metaplex-foundation/mpl-fixed-price-sale",
-  "version": "0.11.0",
+  "version": "0.12.0",
+  "programVersion": "0.3.0",
   "description": "MPL Fixed Price Sale JavaScript API.",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
