fix syntax error

--- a/.github/workflows/apply-version-update.yml
+++ b/.github/workflows/apply-version-update.yml
@@ -114,7 +114,8 @@ jobs:
 
   update-pr-with-changes:
     needs: [get-changes-scope, get-version-scope]
-    if: needs.get-version-scope.outputs.has-versioning == 'true' && needs.get-changes-scope.outputs.num-packages > 0    runs-on: ubuntu-latest
+    if: needs.get-version-scope.outputs.has-versioning == 'true' && needs.get-changes-scope.outputs.num-packages > 0
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/install-linux-build-deps
