--- a/.github/actions/make-version-changes/action.yaml
+++ b/.github/actions/make-version-changes/action.yaml
@@ -13,16 +13,6 @@ inputs:
   from-repository:
     description: 'From full repo name'
     required: true
-  to-branch:
-    description: 'To branch'
-    required: true
-  to-repository:
-    description: 'To full repo name'
-    required: true
-  pull-number:
-    description:
-      'Pull request numeric ID. If this is empty, expect a commit-sha with an associated PR.'
-    required: true
 
 runs:
   using: 'composite'
@@ -56,14 +46,7 @@ runs:
       with:
         script: |
           const script = require('.github/actions/make-version-changes/script.js')
-          const change_config = {
-            from_repository: '${{ inputs.from-repository }}',
-            from_branch: '${{ inputs.from-branch }}',
-            to_repository: '${{ inputs.to-repository }}',
-            to_branch: '${{ inputs.to-branch }}',
-            pull_number: '${{ inputs.pull-number }}'
-          }
-          await script({github, context, core, glob, io, change_config}, ${{ inputs.changed-packages }}, ${{ inputs.versioning }})
+          await script({github, context, core, glob, io}, ${{ inputs.changed-packages }}, ${{ inputs.versioning }})
 
     - name: Cleanup dependency installs
       run: git restore yarn.lock
