--- a/trifle/program/Cargo.toml
+++ b/trifle/program/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mpl_trifle"
+name = "mpl-trifle"
 version = "0.1.0"
 description = "Metaplex Composability Program"
 authors = ["Metaplex Developers <dev@metaplex.com>"]
