--- a/trifle/js/package.json
+++ b/trifle/js/package.json
@@ -53,12 +53,16 @@
     "@metaplex-foundation/solita": "0.19.0",
     "@types/debug": "^4.1.7",
     "@types/tape": "^4.13.2",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "cpr": "^3.0.1",
     "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "rimraf": "^3.0.2",
     "spok": "^1.4.3",
     "supports-color": "^9.2.1",
     "tape": "^5.5.3",
-    "typescript": "^4.6.2"
+    "typescript": "^4.9.3"
   }
 }
