--- a/.github/workflows/integration-reusable.yml
+++ b/.github/workflows/integration-reusable.yml
@@ -47,7 +47,7 @@ jobs:
               - '.github/workflows/integration-reusable.yml'
   build-and-test:
     name: Build and Test
-    runs-on: buildjet-8vcpu-ubuntu-2204
+    runs-on: ubuntu-latest-8-cores
     needs: changes
     if: |
       inputs.changes == false ||
